# agent_and_mcp

LangChainChatBot/: CLAUDE.md  README.md  agent.py  hitl_agent.py  langgraph.json  langgraph.json2  requirements.txt  run.py  test_memory.py
LangChainChatBot/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
agent-chat-app/: pnpm-lock.yaml
mcp-get-weather/: README.md  agent_prompts.txt  client.py  client2.py  pyproject.toml  requirements.txt  servers_config.json  servers_config2.json  test_client.py  weather_server.py  write_server.py
mcp-get-weather/output/: note_20251203_140500.txt  note_20251203_140835.txt  quick_sort.py
nl2sql/: nl2sql.py  prompt.txt  pyproject.toml  requirements.txt  run.py  run_stream.py  run_typewriter.py
