[project]
name = "nl2sql"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.4",
    "langgraph-checkpoint>=2.1.0",
    "python-dotenv>=1.2.1",
]
